--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_RAPID_API_KEY=ff553c27e0mshcdd3135e2aeec19p1a4feejsn7c0b12c7f4fe
+REACT_APP_RAPID_API_KEY='ff553c27e0mshcdd3135e2aeec19p1a4feejsn7c0b12c7f4fe'
